RESOLVED FIXED44008
IE SVG empty path test fails
https://bugs.webkit.org/show_bug.cgi?id=44008
Summary IE SVG empty path test fails
Rob Buis
Reported 2010-08-14 02:57:45 PDT
The refered testcase fails, since the marker is not rendered on the empty line.
Attachments
testcase fix attempt (7.64 KB, patch)
2010-08-14 07:13 PDT, Rob Buis
no flags
testcase fix attempt 2 (6.78 KB, patch)
2010-08-14 07:36 PDT, Rob Buis
no flags
also include changed test results (111.58 KB, patch)
2010-08-14 09:36 PDT, Rob Buis
krit: review+
Rob Buis
Comment 1 2010-08-14 07:13:29 PDT
Created attachment 64415 [details] testcase fix attempt
Rob Buis
Comment 2 2010-08-14 07:36:31 PDT
Created attachment 64416 [details] testcase fix attempt 2
Rob Buis
Comment 3 2010-08-14 09:36:49 PDT
Created attachment 64418 [details] also include changed test results
Dirk Schulze
Comment 4 2010-08-14 09:47:09 PDT
Comment on attachment 64418 [details] also include changed test results Great Patch. r=me :-) Not sure, why mac can't apply the patch.
WebKit Review Bot
Comment 5 2010-08-14 11:39:50 PDT
http://trac.webkit.org/changeset/65370 might have broken SnowLeopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.