2010-08-14  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Dirk Schulze.

        IE SVG empty path test fails
        https://bugs.webkit.org/show_bug.cgi?id=44008

        Change createLine to allow creating zero-length lines. This makes it possible
        to have markers and line-caps applied to zero-length lines.

        Test: svg/custom/marker-empty-path.svg

        * platform/graphics/Path.cpp:
        (WebCore::Path::createLine):

Canonical link: https://commits.webkit.org/56170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65370 268f45cc-cd09-0410-ab3c-d52691b4dbfc