WebCore/platform/graphics/Path.cpp
@@ -266,8 +266,6 @@ Path Path::createCircle(const FloatPoint& center, float r)
 Path Path::createLine(const FloatPoint& start, const FloatPoint& end)
 {
     Path path;
-    if (start.x() == end.x() && start.y() == end.y())
-        return path;
 
     path.moveTo(start);
     path.addLineTo(end);
